@@ -1,6 +1,6 @@
 {
   "name": "menhera-bot",
-  "version": "3.4.1",
+  "version": "3.4.2-pre",
   "engines": {
     "node": ">=16.6.0"
   },
